package com.ofdun.jobfinder.cli.dto.matching;

public record MatchResult(Long id, Float score) {}
